# PI-2C-2023

PI/1Parcial/: CMakeLists.txt
PI/P01/: CMakeLists.txt  out.txt  tp1_01.c  tp1_02.c  tp1_03.c  tp1_04.c  tp1_05.c  tp1_06  tp1_06.c  tp1_07  tp1_07.c  tp1_08.c  tp1_09a  tp1_09b  tp1_09b.c  tp1_10.c  tp1_10.txt  tp1_12.c  tp1_14b.c
PI/P02/: CMakeLists.txt  Ej10.c  Ej11.c  Ej12.c  Ej13.c  Ej14.c  Ej15.c  Ej16.c  Ej2.c  Ej4.c  Ej5.c  Ej6.c  Ej8.c  Ej9.c  entrada.txt  output.txt  test1.c
PI/P03/: CMakeLists.txt  Clase.c  EJ25.c  Ej1.c  Ej11.c  Ej12.c  Ej13.c  Ej14.c  Ej1_Taller.c  Ej2.c  Ej2_Taller.c  Ej3.c  Ej3_Taller.c  Ej4.c  Ej4_Taller.c  Ej5.c  Ej6.c  Ej9a.c  Ej9b.c
PI/P04/: CMakeLists.txt  Ej1.c  Ej11.c  Ej16.c  Ej17.c  Ej3.c  Ej4.c  Ej5.c  Ej6.c  Ej7.c
PI/P05/: CMakeLists.txt  Ej1.c  Ej2.c  Ej3_a_b_c.c  Ej3_d_e.c  Ej4.c  Ej5.c  Ej6.c  Ej7.c  Ej8.c  Ej9.c
PI/P06/: CMakeLists.txt  Ej11.c  Ej12.c  Ej13.c  Ej14.c  Ej15.c  Ej16.c  Ej17.c  Ej18.c  Ej20.c  Ej22.c  Ej23.c  Ej24.c  Ej25.c  Ej28.c  Ej2Clase.c  Ej3.c  Ej33.c  Ej4.c  Ej5.c  Ej6.c  Ej7.c  EjPunterosClase.c  pruebaPunteros.c
PI/P07/: CMakeLists.txt  Ej10.c  Ej16.c  Ej19.c  Ej2.c  Ej20.c  Ej5.c  Ej6.c  Ej8.c  Prueba.c
PI/P08/: CMakeLists.txt  Ej4.c  Ej5.c  Ej6.c  Ej7.c
PI/Taller/: CMakeLists.txt
PI/Taller/10-11/diccioADT/: Main_diccio.c  diccioADT.c  diccioADT.h
PI/Taller/10-11/queueADT/: Main_queue.c  queueADT.c  queueADT.h
PI/Taller/11-8/: Ej1.c
PI/Taller/20-10/: Ej1.c  Ej2.c  Ej3.c
PI/Taller/25-8/: Ej1.c
PI/Taller/27-10/: Ej1.c  Ej2.c  Ej3.c
PI/Taller/3-11/: Ej1.c  Ej2.c  Ej3.c  Ej4.c
(+91 files in other folders)
