cmake_minimum_required(VERSION 3.26)
project(P01)

set(CMAKE_CXX_STANDARD 14)

add_executable(P01
        tp1_01.c
        tp1_02.c
        tp1_03.c
        tp1_03.exe
        tp1_04.c
        tp1_04.exe
        tp1_05.c
        tp1_05.exe
        tp1_06.c
        tp1_07.c
        tp1_08.c
        tp1_09a.c
        tp1_09b.c
        tp1_10.c
        tp1_11.c
        tp1_11.txt
        tp1_12.c
        tp1_12.h
        tp1_13.c
        tp1_13b.c
        tp1_14.c
        tp1_14b.c)
